# hs-utils

./: Makefile  README  makefile.sh
00_hello/: Makefile  README  hello.hs
01_cat/: cat.hs
01_cat_and_wc/: cat.hs
01_wc_and_cat/: README  wc.hs
01_wc_and_cat2/: CmdFunctions.hi  CmdFunctions.hs  Makefile  cat  cat.hi  cat.hs  commentar  questions  wc  wc.hi  wc.hs
02_wc_with_options/: README  wc.cabal  wc.hs
02_wc_with_options/HSUtils/: CmdFunctions.hs
02_wc_with_options/HSUtils/WC/: Options.hs
