name                          : wc
version                       : 20100906

cabal-version                 : >= 1.2
build-type                    : Simple

executable                      wc
  main-is                     : wc.hs
  other-modules               : HSUtils.WC.Options
  build-depends               : base >= 4
                              , containers >= 0.3
                              , parsec >= 3
  extensions                  : FlexibleContexts 
                              , NoMonomorphismRestriction
